fixed alignment on popul

--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -61,6 +61,7 @@ body {
 .sidebar {
   display: flex;
   flex-direction: column;
+  align-items: center; /* Center items horizontally */
   width: 20%;
   padding-right: 20px;
   padding-top: 60px;
@@ -75,16 +76,16 @@ body {
   color: #404040;
   background-color: transparent;
   border: none;
-  padding: 12px 20px 12px 30px;
+  padding: 12px 20px;
   margin-bottom: 10px;
   cursor: pointer;
   transition: all 0.3s ease;
   font-weight: 700;
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center; /* Center text and icon */
   border-radius: 8px;
-  width: calc(100% - 30px);
+  width: calc(100% - 40px); /* Adjust width to fit within the sidebar */
 }
 
 .menu-button.active {
